--- a/index.Rmd
+++ b/index.Rmd
@@ -285,53 +285,112 @@ According to Wikipedia (https://en.wikipedia.org/wiki/American_Community_Survey)
 > It is a mandatory survey, it is governed by federal laws that could impose a fine of as much as $5,000 for refusing to participate.
 
 
+We are particuarlly interesed in the following tables on the last page of the [Measure of America 2019 report](https://ssrc-static.s3.amazonaws.com/moa/Making%20the%20Connection.pdf){target="_blank"}:
+
+```{r, echo = FALSE, gender_race_eth_2019}
+knitr::include_graphics(here::here("img", "gender_race_ethnicity_overview.png"))
+```
+
+We are particuarlly interesed in the tables on the following pages from the [Measure of America 2020 report](https://ssrc-static.s3.amazonaws.com/moa/ADecadeUndone.pdf){target="_blank"}:
+
+
+```{r, echo = FALSE}
+knitr::include_graphics(here::here("img", "latino_2018_overview.png"))
+```
+
+```{r, echo = FALSE}
+knitr::include_graphics(here::here("img", "asian_2018_overview.png"))
+```
+
+
+
 ## **Data Import**
 *** 
 
-One way to import data from a pdf is to use the  `pdftools` packages. 
+One way to import data from a pdf is to use the `pdf_text()` function of the `pdftools` package. The `here()` function of the `here` package can allow us to specify where the document that we want to import is located easily, starting from the directory where a `.Rproj` file is located. In this case, we will import the `Making_the_Connection.pdf` in the `docs` directory. *Note this is the case if you pull the repository from github*
 
-From the output, it's clear that a large amount of manipulation will be required to wrangle this data with the `pdftools` package.
+```{r}
+pdf_tools_example <- pdftools::pdf_text(here::here("docs","Making_the_Connection.pdf"))
+```
+
+We can take a look at the output for the page with our table of interests by simpy using brackets `[]` around the page number. The page we are interested in (athough called 39 in the report) is the 44th page, which looks like this:
+
+```{r, gender_race_eth_2019, echo=FALSE}
+```
 
 #### {.scrollable }
 ```{r}
-pdf_data_example <- pdftools::pdf_data(here("docs", "Making_the_Connection.pdf"))
-
-utils::head(pdf_data_example, 1)
-
-pdf_tools_example <- pdftools::pdf_text(here("docs","Making_the_Connection.pdf"))
-
-head(pdf_tools_example, 1)
+# Scroll through the output!
+pdf_tools_example[44]
 ```
 ####
 
-While not impossible, it's hard not to argue that using the `pdftools` package in this scenario will require a lot of advanced data wrangling. While our output may be reproducible, the amount of time to achieve this reproducibility may not be any more efficient than typing the table by hand into a text or spreadsheet program.
+From the output, it's clear that a relatively large amount of manipulation will be required to wrangle this data. If you are interested in learning more about this method, please see this [case study](https://opencasestudies.github.io/ocs-bp-rural-and-urban-obesity/){target="_blank"} and this [case study](https://opencasestudies.github.io/ocs-bp-rural-and-urban-obesity/){target="_blank"}.
+
+While not impossible, it's hard not to argue that using the `pdftools` package in this scenario will require some advanced data wrangling.
+
+While our output may be reproducible, this process may be too time consuming.
 
 Fortunately, there is another way we can proceed to wrangle the data. 
 
-We will demonstrate how to produce reproducible tables with image processing software in `R`. 
+We will demonstrate how to produce reproducible tables with image processing software in `R` using  a package called `magick` which allows for the extraction of text from images.
 
 For demonstrative purposes, we will import two sets of data. The first set of data will be used to highlight common errors that the image processing software may produce. The second set of data will be used to demonstrate how to circumvent these errors and produce reproducible datasets efficiently.
 
-We will now import the data using the `magick` and `here` packages. 
+
+### Importing with `magick`
+
+We will now import the data using the `magick` package which allows for the improtation of images. 
+
+First we will take a screenshot of the top part of the gender, race, and ethnicity table on the last page of the [2019 Measure of America Report](https://ssrc-static.s3.amazonaws.com/moa/Making%20the%20Connection.pdf){target="_blank"}.
+
+We can show what this file looks like in this rendered rmarkdown website by using the `include_graphics()` function of the `knitr` package.
+
+```{r}
+knitr::include_graphics(here::here("img", "gender_race_ethnicity.png"))
+```
+
+Now, we will use the `image_read()` function of the `magick` package to import this image.
+
+We can then use teh `image_info()` function to make sure that the import worked and to get information about the size, format and color of the image.
 
 ```{r, dpi = 1000}
-#bold is causing issues
 image_example <- magick::image_read(here::here("img", "gender_race_ethnicity.png"))
 
 magick::image_info(image_example)
 ```
+Now let's take a look at our image in R! Now that we have imported it to see this image, we simply need to type the name of the image.
 
-We import the same data—this time without regions of the table without special formatting—using the `magick` and `here` packages. 
+```{r}
+image_example
+```
+
+Nice!
+
+We will demonstrate in a bit that the top part of the table was causing issues when extracting the text from this image.  So now we will take a screen shot without the top part of the table and do the same process.
 
 ```{r, dpi = 1000}
-#bold is causing issues
-image1 <- image_read(here("img", "gender_race_ethnicity2.png"))
-
-magick::image_info(image1)
+cropped_table_gen_race_eth_2018 <- image_read(here("img", "gender_race_ethnicity2.png"))
+cropped_table_gen_race_eth_2018
 ```
+Let's import one more image just for fun. As you can see we can also import images directly from a URL.
+
+```{r, out.width="20%"}
+tidyverse_logo <- image_read("https://d33wubrfki0l68.cloudfront.net/2c6239d311be6d037c251c71c3902792f8c4ddd2/12f67/css/images/hex/ggplot2.png")
+tidyverse_logo
+```
+
+Now we will use the `image_ocr()` function of the `magick` package to extract the text from the OCS logo image. This function uses the `tesseract` package which has tools for [optical character recognition (OCR)](https://en.wikipedia.org/wiki/Optical_character_recognition){target="_blank"}, hence the `ocr` in the function name. This allows the function to identify text in many cases from images. These OCR tools have often used [machine learning](https://en.wikipedia.org/wiki/Machine_learning){target="_blank"} in which an algorithm trained on images with and without text to "learn" to recognize text. See [here](https://towardsdatascience.com/a-gentle-introduction-to-ocr-ee1469a201aa){target="_blank"} to learn more about how OCR works.
+
+```{r}
+magick::image_ocr(tidyverse_logo)
+```
+
+Awesome! We were able to extract text from this hex sticker!
 
 ## **Data Exploration and Wrangling**
 *** 
+Now let's extract text from our image files.
 
 The first image we imported looks like this. 
 
@@ -339,49 +398,74 @@ The first image we imported looks like this.
 image_example
 ```
 
-Parts of the table depicted in the image above contain [**newline**](https://en.wikipedia.org/wiki/Newline?oldformat=true) characters. A newline character denotes the end of a line of text and the start of a new line of text. 
-
-This makes it more difficult to wrangle this table. Wrangling the data via regular expressions may be very tedious. It's unlikely that image processing software can handle the newline characters—or any other special characters—correctly.
-
-Using `image_ocr()` by `magick` on the image above will render some errors in the first few lines. 
+Now we will extract the text! 
 
 ```{r}
 df1 <- magick::image_ocr(image_example)
-
-df1 %>%
-  base::strsplit("\n") %>%
-  base::unlist() %>%
-  tibble::as_tibble()
+df1
 ```
 
-If we remove these lines, some new errors emerge. 
+Ok so you may notice that there are lots of `\n` values in the text from our image. These are [**newline**](https://en.wikipedia.org/wiki/Newline?oldformat=true) characters, which denote the end of a line of text and the start of a new line of text.  
+
+We can use the `str_split()` function of the `stringr` package to split based on the `\n` characters in the output. We will then unlist the output using the base R `unlist()` function. By base, we mean that the function it is loaded automatically in an R session. Finally we will use the `as_tibble()` function of the `tibble` package to convert the data into [tibble](https://tibble.tidyverse.org/){target="_blank"} format, which is the tidyverse version of a data frame.
+
+
+```{r}
+df1<-df1 %>%
+  stringr::str_split(pattern ="\n") %>%
+  unlist() %>%
+  tibble::as_tibble()
+
+df1
+```
+OK, not bad... let's try splitting into columns based on a space:
 
 ```{r}
 df1 %>%
-  base::strsplit("\n") %>%
-  base::unlist() %>%
-  tibble::as_tibble() %>%
-  dplyr::slice(-(1:3))
+    dplyr::select(value) %>%
+  pull(value) %>%
+  str_split(" ")
+
 ```
+
+
+OK, so we can see that this isn't what we wanted. 
+
+<!-- This makes it more difficult to wrangle this table. Wrangling the data via regular expressions may be very tedious. It's unlikely that image processing software can handle the newline characters—or any other special characters—correctly. -->
+
+<!-- Using `image_ocr()` by `magick` on the image above will render some errors in the first few lines.  -->
+
+
+If we remove the top 3 lines using the `slice()` function of the the `dplyr packge befoer we split by spaces, here is our output:
+
+```{r}
+df1 %>%
+  dplyr::slice(-(1:3)) %>%
+    dplyr::select(value) %>%
+  pull(value) %>%
+  str_split(" ")
+
+```
+OK, so this did not fix our output issues.
 
 Data wrangling is not an exact science. The approaches we can take are extremely dependent on the data. We can exploit patterns in the data to render the output we desire. 
 
-We will now use a cropped version of the image above without the special formatting.
+Now we will now use the cropped version of the image above that doesnt include the first few lines that have special formatting.
 
 #### {.scrollable }
 ```{r, dpi = 1000}
 rm(df1)
 
-image_info(image1)
+cropped_table_gen_race_eth_2018
 
-base::print(image1)
-
-df1 <- image_ocr(image1)
+df1 <- image_ocr(cropped_table_gen_race_eth_2018)
 
 df1 <- df1 %>%
-  strsplit("\n") %>%
+  str_split("\n") %>%
   unlist() %>%
   as_tibble()
+
+df1
 ```
 ####
 
@@ -390,10 +474,13 @@ We have several strings. Each cell of data is on a string separated by space.
 We separate each string by space. 
 
 ```{r}
+
 df1 <- df1 %>%
   dplyr::select(value) %>%
   pull(value) %>%
   str_split(" ")
+
+df1
 ```
 
 We split the dataframe in two: a labels section and a "data" section containing the information we are interested in. 
